--- a/testcases/0002_stlc_pair_ext/description
+++ b/testcases/0002_stlc_pair_ext/description
@@ -1,7 +1,7 @@
 language=stlc
 extendedExt=xst
 baseExt=st
-input=PairExtension.xst
+input=PairExtensionTest01.xst
 exitcode=0
 success=yes
 srcdir=TestSTLC
